--- a/main.html
+++ b/main.html
@@ -3,10 +3,28 @@
 <html>
 
 <head>
+	<title>Flower Showcase</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body
+	<!-- First Div: Flowers Photos -->
+  <div>
+    <h1 id="f1">Flowers photos</h1>
+    <p style="font-size: 18px;">
+      Flowers are the colorful and fragrant parts of plants that often symbolize beauty, love, and life.
+      They play a vital role in plant reproduction and are admired for their variety and charm.
+    </p>
+  </div>
+
+  <!-- Second Div: Roses Pictures -->
+  <div>
+    <h1 id="f2">Roses pictures</h1>
+    <p>
+      Roses are one of the most popular and beloved flowers in the world, known for their elegance and wide range of colors.
+      They symbolize love, passion, and appreciation and are often gifted during special occasions.
+    </p>
+  </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
